Correcciones en el logo de pagina y la fecha de la ultima modificacion

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="./index.html" class="brand-logo position-logo">
                     <p style="font-size:20px; margin: 0px; padding: 0px;"><span class="indigo-text center">Tic</span><span
                             class="white-text">oRi</span><span class="red-text">des</span>
-                        <img src="https://cdn.pixabay.com/photo/2015/08/16/06/26/costa-rica-890669_960_720.png" alt="https://cdn.pixabay.com/photo/2015/08/16/06/26/costa-rica-890669_960_720.png"
+                        <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png"
                             width="25px">
                     </p>
                 </a>
@@ -140,7 +140,7 @@
                         <div class="right">
                             <h2 style="font-size:20px;"><span class="indigo-text center">Tic</span><span class="white-text">oRi</span><span
                                     class="red-text">des</span></h2>
-                            <img src="https://cdn.pixabay.com/photo/2015/08/16/06/26/costa-rica-890669_960_720.png" alt="https://cdn.pixabay.com/photo/2015/08/16/06/26/costa-rica-890669_960_720.png"
+                            <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png"
                                 width="50px">
                         </div>
                     </div>
