Cambios en la visualización de la pagina pricipal con respecto al resposive a dispositivos mas pequenos, se termino la front-end del login y signin

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!--Import Google Icon Font-->
@@ -44,7 +45,7 @@
             <div class="transparend-div">
                 <div class="parallax-container">
                     <div class="welcome center">
-                        <h2 class="white-text h2">Bienvenidos a TicoRides</h2>
+                        <h2 class="white-text">Bienvenidos a TicoRides</h2>
                         <p class="white-text p">
                             TicoRides es una aplicación nacional que proporciona a los usuarios información sobre
                             los
@@ -70,12 +71,12 @@
                     <h2 class="header">Buscar Rides</h2>
                     <form class="col s12">
                         <div class="row">
-                            <div class="input-field col s6">
+                            <div class="input-field col s12 l6">
                                 <i class="material-icons prefix">drive_eta</i>
                                 <input id="salida" type="text" class="validate">
                                 <label for="salida">Lugar de Salida</label>
                             </div>
-                            <div class="input-field col s6">
+                            <div class="input-field col s12 l6">
                                 <i class="material-icons prefix">pin_drop</i>
                                 <input id="destino" type="text" class="validate">
                                 <label for="destino">Lugar de Destino</label>
@@ -148,7 +149,7 @@
             </div>
             <div class="footer-copyright center">
                 <div class="container">
-                    © 2014 Copyright TicoRides
+                    © 2018 Copyright TicoRides
                 </div>
             </div>
         </footer>
