front-end del dashboard esta completado sus estilos correspodientes

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <a href="./index.html" class="brand-logo position-logo">
                     <p style="font-size:20px; margin: 0px; padding: 0px;"><span class="indigo-text center">Tic</span><span
                             class="white-text">oRi</span><span class="red-text">des</span>
-                        <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png"
-                            width="25px">
+                        <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png" width="25px">
                     </p>
                 </a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
