--- a/dashboard.html
+++ b/dashboard.html
@@ -16,7 +16,7 @@
     <!-- My styles CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 
-    <title>Iniciar session</title>
+    <title>Dashboard</title>
 </head>
 
 <body>
@@ -31,56 +31,58 @@
                 </a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="./login.html">Iniciar Session</a></li>
-                    <li><a href="./signin.html">Crear cuenta</a></li>
+                    <li><a href="./dashboard.html">Dashboard</a></li>
+                    <li><a href="./rides.html">Rides</a></li>
+                    <li><a href="./setting.html">Configuración</a></li>
                 </ul>
             </div>
         </nav>
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="./login.html">Iniciar Session</a></li>
-            <li><a href="./signin.html">Crear cuenta</a></li>
+            <li><a href="./dashboard.html">Dashboard</a></li>
+            <li><a href="./rides.html">Rides</a></li>
+            <li><a href="./setting.html">Configuración</a></li>
         </ul>
-        <main class="section-login">
-            <center>
+        <div class="container">
+            <div class="section white">
+                <h2 class="header center">Mis Rides</h2>
+                <a class="btn waves-effect green btn-small right"><i class="material-icons left">add</i>Añadir</a>
+                <table class="highlight centered">
+                    <thead>
+                        <tr>
+                            <th>Usuario</th>
+                            <th>Inicio</th>
+                            <th>Destino</th>
+                            <th>Editar</th>
+                            <th>Eliminar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Alvin</td>
+                            <td>Eclair</td>
+                            <td>$0.87</td>
+                            <td><a class="btn waves-effect yellow darken-4 btn-small"><i class="material-icons left">edit</i>editar</a></td>
+                            <td><a class="btn waves-effect red btn-small"><i class="material-icons left">delete</i>Elimnar</a></td>
+                        </tr>
+                        <tr>
+                            <td>Alan</td>
+                            <td>Jellybean</td>
+                            <td>$3.76</td>
+                            <td><a class="btn waves-effect yellow darken-4 btn-small"><i class="material-icons left">edit</i>editar</a></td>
+                            <td><a class="btn waves-effect red btn-small"><i class="material-icons left">delete</i>Elimnar</a></td>
+                        </tr>
+                        <tr>
+                            <td>Jonathan</td>
+                            <td>Lollipop</td>
+                            <td>$7.00</td>
+                            <td><a class="btn waves-effect yellow darken-4 btn-small"><i class="material-icons left">edit</i>editar</a></td>
+                            <td><a class="btn waves-effect red btn-small"><i class="material-icons left">delete</i>Elimnar</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-                <div class="container">
-                    <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
-
-                        <form class="col s12" method="post">
-                            <div class='row'>
-                                <div class='col s12'>
-                                    <h5 class="indigo-text">Por favor, ingresa tus datos para iniciar session</h5>
-                                </div>
-                            </div>
-
-                            <div class='row'>
-                                <div class='input-field col s12'>
-                                    <input class='validate' type='text' name='user' id='user' required />
-                                    <label for='user'>Usuario</label>
-                                </div>
-                            </div>
-
-                            <div class='row'>
-                                <div class='input-field col s12'>
-                                    <input class='validate' type='password' name='password' id='password' required />
-                                    <label for='password'>Contraseña</label>
-                                </div>
-                                <label style='float: right;'>
-                                    <p>¿No tienes cuenta?, obtiene una <a class='blue-text' href='./signin.html'><b>aquí</b></a>.</p>
-                                </label>
-                            </div>
-
-                            <br />
-                            <center>
-                                <div class='row'>
-                                    <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect blue'>Entrar</button>
-                                </div>
-                            </center>
-                        </form>
-                    </div>
-                </div>
-            </center>
-        </main>
         <footer class="page-footer blue">
             <div class="container">
                 <div class="row">
