se han echo correcciones del dashboard en la parte de front-end y se termino parte grafica de los rides

--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Alvin</td>
+       t                     <td>Alvin</td>
                             <td>Eclair</td>
                             <td>$0.87</td>
                             <td><a class="btn waves-effect yellow darken-4 btn-small"><i class="material-icons left">edit</i>editar</a></td>
