--- a/index.html
+++ b/index.html
@@ -160,11 +160,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
-    <script src="./js/app.js"></script>
-    <script>
-        activeScriptMaterialize();
-        scroll();
-    </script>
+    <script src="./js/eventapp.js"></script>
 </body>
 
 </html>
