se cambio la districion del codigo javascript al hora de que se realiza los eventos la pagina principal, se termino de corregir el registro de usuario con sus respectivas validaciones a la ves se registra al usuario al localstorage. nota falta validar que los nombres de usuarios no se repitan

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <nav class="blue lighten-1">
             <div class="nav-wrapper">
-                <a href="./index.html" class="brand-logo position-logo">
+                <a href="./dashboard.html" class="brand-logo position-logo">
                     <p style="font-size:20px; margin: 0px; padding: 0px;"><span class="indigo-text center">Tic</span><span
                             class="white-text">oRi</span><span class="red-text">des</span>
                         <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png" width="25px">
@@ -58,7 +58,7 @@
                     </thead>
                     <tbody>
                         <tr>
-       t                     <td>Alvin</td>
+                            <td>Alvin</td>
                             <td>Eclair</td>
                             <td>$0.87</td>
                             <td><a class="btn waves-effect yellow darken-4 btn-small"><i class="material-icons left">edit</i>editar</a></td>
@@ -114,10 +114,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
+    <script src="./js/materialize.js"></script>
+    <script src="./js/localstorage.js"></script>
     <script src="./js/app.js"></script>
-    <script>
-        activeScriptMaterialize();
-    </script>
 </body>
 
 </html>
