--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
-    <script src="./js/eventapp.js"></script>
+    <script src="./js/materialize.js"></script>
+    <script src="./js/scroll.js"></script>
 </body>
 
 </html>
