--- a/login.html
+++ b/login.html
@@ -112,10 +112,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
+    <script src="./js/materialize.js"></script>
+    <script src="./js/localstorage.js"></script>
     <script src="./js/app.js"></script>
-    <script>
-        activeScriptMaterialize();
-    </script>
 </body>
 
 </html>
