--- a/signin.html
+++ b/signin.html
@@ -45,7 +45,7 @@
                 <div class="container">
                     <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
-                        <form class="col s12" method="post">
+                        <form class="col s12" method="post" name="form" id="form">
                             <div class="row">
                                 <div class="col s12">
                                     <h5 class="indigo-text">Crear Cuenta</h5>
@@ -56,47 +56,43 @@
                                 <div class='input-field col s12'>
                                     <input class="validate" type="text" name="name" id="name" />
                                     <label for="name">Nombre</label>
-                                    <div class="green-text left" id="success-name"></div>
-                                    <div class="red-text left" id="error-name"></div>
+                                    <div class="left" id="alert-name"></div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input class="validate" type="text" name="lastname" id="lastname" />
                                     <label for="lastname">Apellido</label>
-                                    <div class="green-text left" id="success-lastname"></div>
-                                    <div class="red-text left" id="error-lastname"></div>
+                                    <div class="left" id="alert-lastname"></div>
                                 </div>
                             </div>
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input class="validate" type="number" name="phone" id="phone" />
+                                    <input class="validate" type="text" name="phone" id="phone" minlength="1" maxlength="8"/>
                                     <label for="phone">Telefono</label>
-                                    <div class="green-text left" id="success-phone"></div>
-                                    <div class="red-text left" id="error-phone"></div>
+                                    <div class="left" id="alert-phone"></div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input class="validate" type="text" name="username" id="username" />
                                     <label for="username">Nombre de usuario</label>
-                                    <div class="green-text left" id="success-username"></div>
-                                    <div class="red-text left" id="error-username"></div>
+                                   <div class="left" id="alert-username"></div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="input-field col s12">
                                     <input class="validate" type="password" name="passwd" id="passwd" />
                                     <label for="passwd">Contraseña</label>
+                                    <div class="left" id="alert-passwd"></div>
                                 </div>
                             </div>
                             <div class='row'>
                                 <div class='input-field col s12'>
                                     <input class='validate' type='password' name='passwd-repeat' id='passwd-repeat' />
                                     <label for='passwd-repeat'>Repetir Contraseña</label>
-                                    <div class="green-text left" id="success-passwd"></div>
-                                    <div class="red-text left" id="error-repasswd"></div>
+                                    <div class="left" id="alert-repasswd"></div>
                                 </div>
                                 <label style='float: right;'>
                                     <p>¿ya tienes cuenta?, inicia session <a class='blue-text' href='./login.html'><b>aquí</b></a>.</p>
@@ -130,7 +126,7 @@
                             <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png"
                                 width="50px">
                         </div>
-                    </div>
+                    </div>vsdvasdvas
                 </div>
             </div>
             <div class="footer-copyright center">
@@ -147,7 +143,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
-    <script src="./js/eventapp.js"></script>
+    <script src="./js/materialize.js"></script>
     <script src="./js/localstorage.js"></script>
     <script src="./js/app.js"></script>
 </body>
