--- a/dashboard.html
+++ b/dashboard.html
@@ -109,12 +109,15 @@
             </div>
         </footer>
     </div>
+     <!-- Compiled and minified JavaScript jquery -->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
+    <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
     <script src="./js/app.js"></script>
 </body>
