--- a/login.html
+++ b/login.html
@@ -57,6 +57,7 @@
                                 <div class='input-field col s12'>
                                     <input class='validate' type='text' name='user' id='user' required />
                                     <label for='user'>Usuario</label>
+                                    <div class="left" id="alert-username"></div>
                                 </div>
                             </div>
 
@@ -64,6 +65,7 @@
                                 <div class='input-field col s12'>
                                     <input class='validate' type='password' name='password' id='password' required />
                                     <label for='password'>Contraseña</label>
+                                    <div class="left" id="alert-passwd"></div>
                                 </div>
                                 <label style='float: right;'>
                                     <p>¿No tienes cuenta?, obtiene una <a class='blue-text' href='./signin.html'><b>aquí</b></a>.</p>
@@ -73,7 +75,7 @@
                             <br />
                             <center>
                                 <div class='row'>
-                                    <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect blue'>Entrar</button>
+                                    <button type="button" name="btn_login" id="btn_login" class='col s12 btn btn-large waves-effect blue'>Entrar</button>
                                 </div>
                             </center>
                         </form>
@@ -107,12 +109,15 @@
             </div>
         </footer>
     </div>
+    <!-- Compiled and minified JavaScript jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
+    <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
     <script src="./js/app.js"></script>
 </body>
