--- a/signin.html
+++ b/signin.html
@@ -144,6 +144,7 @@
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
+    <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
     <script src="./js/app.js"></script>
 </body>
