Nuevos archivos en la parte del javascript para llebar un orden, ademas ya agrega rides con el usuario y su respectivo id

--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <!-- My styles CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 
+
     <title>Página principal</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <nav class="blue lighten-1">
+        <nav class="black">
             <div class="nav-wrapper">
                 <a href="./index.html" class="brand-logo position-logo">
                     <p style="font-size:20px; margin: 0px; padding: 0px;"><span class="indigo-text center">Tic</span><span
@@ -127,7 +128,7 @@
                 </div>
             </div>
         </div>
-        <footer class="page-footer blue">
+        <footer class="page-footer black">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
