--- a/dashboard.html
+++ b/dashboard.html
@@ -21,27 +21,44 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="blue lighten-1">
+        <!-- Dropdown Structure -->
+        <ul id="dropdown1" class="dropdown-content">
+            <li><a href="#!" id="close-session">Cerrar session</a></li>
+        </ul>
+        <nav class="black">
             <div class="nav-wrapper">
+                <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <a href="./dashboard.html" class="brand-logo position-logo">
                     <p style="font-size:20px; margin: 0px; padding: 0px;"><span class="indigo-text center">Tic</span><span
                             class="white-text">oRi</span><span class="red-text">des</span>
                         <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png" width="25px">
                     </p>
                 </a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="./dashboard.html">Dashboard</a></li>
                     <li><a href="./rides.html">Rides</a></li>
                     <li><a href="./setting.html">Configuración</a></li>
+                    <li><a class="dropdown-trigger" href="#!" id="name-nav-out" data-target="dropdown1"><i class="material-icons right white">arrow_drop_down</i></a></li>
                 </ul>
-            </div>
         </nav>
-        <ul class="sidenav" id="mobile-demo">
+
+        <ul id="slide-out" class="sidenav">
+            <li>
+                <div class="user-view">
+                    <div class="background">
+                        <img src="https://andro4all.com/files/2016/06/fondoportada.jpg">
+                    </div>
+                    <a href="#"><img class="circle" src="https://image.flaticon.com/icons/png/512/149/149071.png"></a>
+                    <a href="#"><span class="white-text" id="name-nav"></span></a>
+                    <a href="#"><span class="white-text" id="username-nav"></span></a>
+                </div>
+            </li>
             <li><a href="./dashboard.html">Dashboard</a></li>
             <li><a href="./rides.html">Rides</a></li>
             <li><a href="./setting.html">Configuración</a></li>
+            <li><a href="#" id="close-session">Cerrar session</a></li>
         </ul>
+
         <div class="container">
             <div class="section white">
                 <h2 class="header center">Mis Rides</h2>
@@ -82,8 +99,7 @@
                 </table>
             </div>
         </div>
-
-        <footer class="page-footer blue">
+        <footer class="page-footer black">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
@@ -109,8 +125,8 @@
             </div>
         </footer>
     </div>
-     <!-- Compiled and minified JavaScript jquery -->
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Compiled and minified JavaScript jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -119,7 +135,11 @@
     <script src="./js/materialize.js"></script>
     <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
+    <script src="./js/constant.js"></script>
+    <script src="./js/object.js"></script>
+    <script src="./js/alert.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/bindevent.js"></script>
 </body>
 
 </html>
