--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="blue lighten-1">
+        <nav class="black">
             <div class="nav-wrapper">
                 <a href="./index.html" class="brand-logo position-logo">
                     <p style="font-size:20px; margin: 0px; padding: 0px;"><span class="indigo-text center">Tic</span><span
@@ -42,48 +42,45 @@
         </ul>
         <main class="section-login">
             <center>
-
                 <div class="container">
-                    <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
+                    <div class="z-depth-1 form-style">
 
-                        <form class="col s12" method="post">
-                            <div class='row'>
-                                <div class='col s12'>
-                                    <h5 class="indigo-text">Por favor, ingresa tus datos para iniciar session</h5>
+                        <form class="col s12" method="post" id="form" name="form" >
+                            <div class="row">
+                                <div class="col s12">
+                                    <h5 class="indigo-text">Iniciar session</h5>
                                 </div>
                             </div>
 
-                            <div class='row'>
-                                <div class='input-field col s12'>
-                                    <input class='validate' type='text' name='user' id='user' required />
-                                    <label for='user'>Usuario</label>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input class="validate" type="text" name="user" id="user" required />
+                                    <label for="user">Usuario</label>
                                     <div class="left" id="alert-username"></div>
                                 </div>
                             </div>
 
-                            <div class='row'>
-                                <div class='input-field col s12'>
-                                    <input class='validate' type='password' name='password' id='password' required />
-                                    <label for='password'>Contraseña</label>
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <input class="validate" type="password" name="password" id="password" required />
+                                    <label for="password">Contraseña</label>
                                     <div class="left" id="alert-passwd"></div>
                                 </div>
-                                <label style='float: right;'>
+                                <label class="label">
                                     <p>¿No tienes cuenta?, obtiene una <a class='blue-text' href='./signin.html'><b>aquí</b></a>.</p>
                                 </label>
                             </div>
 
                             <br />
-                            <center>
-                                <div class='row'>
-                                    <button type="button" name="btn_login" id="btn_login" class='col s12 btn btn-large waves-effect blue'>Entrar</button>
-                                </div>
-                            </center>
+                            <div class="row">
+                                <button type="button" name="btn_login" id="btn_login" class='col s12 btn btn-large waves-effect blue'>Entrar</button>
+                            </div>
                         </form>
                     </div>
                 </div>
             </center>
         </main>
-        <footer class="page-footer blue">
+        <footer class="page-footer black">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
@@ -119,7 +116,11 @@
     <script src="./js/materialize.js"></script>
     <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
+    <script src="./js/constant.js"></script>
+    <script src="./js/object.js"></script>
+    <script src="./js/alert.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/bindevent.js"></script>
 </body>
 
 </html>
