--- a/signin.html
+++ b/signin.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="blue lighten-1">
+        <nav class="black">
             <div class="nav-wrapper">
                 <a href="./index.html" class="brand-logo position-logo">
                     <p style="font-size:20px; margin: 0px; padding: 0px;"><span class="indigo-text center">Tic</span><span
@@ -43,9 +43,9 @@
         <main class="section-signin">
             <center>
                 <div class="container">
-                    <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
+                    <div class="z-depth-1 form-style">
 
-                        <form class="col s12" method="post" name="form" id="form">
+                        <form method="post" id="form" name="form" class="col s6">
                             <div class="row">
                                 <div class="col s12">
                                     <h5 class="indigo-text">Crear Cuenta</h5>
@@ -69,7 +69,7 @@
 
                             <div class="row">
                                 <div class="input-field col s12">
-                                    <input class="validate" type="text" name="phone" id="phone" minlength="1" maxlength="8"/>
+                                    <input class="validate" type="text" name="phone" id="phone" minlength="1" maxlength="8" />
                                     <label for="phone">Telefono</label>
                                     <div class="left" id="alert-phone"></div>
                                 </div>
@@ -78,7 +78,7 @@
                                 <div class="input-field col s12">
                                     <input class="validate" type="text" name="username" id="username" />
                                     <label for="username">Nombre de usuario</label>
-                                   <div class="left" id="alert-username"></div>
+                                    <div class="left" id="alert-username"></div>
                                 </div>
                             </div>
                             <div class="row">
@@ -94,23 +94,21 @@
                                     <label for='passwd-repeat'>Repetir Contraseña</label>
                                     <div class="left" id="alert-repasswd"></div>
                                 </div>
-                                <label style='float: right;'>
+                                <label class="label">
                                     <p>¿ya tienes cuenta?, inicia session <a class='blue-text' href='./login.html'><b>aquí</b></a>.</p>
                                 </label>
                             </div>
 
                             <br />
-                            <center>
-                                <div class='row'>
-                                    <button type='button' name='btn_register' id="btn_register" class='col s12 btn btn-large waves-effect blue'>Registrarme</button>
-                                </div>
-                            </center>
+                            <div class='row'>
+                                <button type='button' name='btn_register' id="btn_register" class='col s12 btn btn-large waves-effect blue'>Registrarme</button>
+                            </div>
                         </form>
                     </div>
                 </div>
             </center>
         </main>
-        <footer class="page-footer blue">
+        <footer class="page-footer black">
             <div class="container">
                 <div class="row">
                     <div class="col l6 s12">
@@ -126,7 +124,7 @@
                             <img src="./img/costa-rica-890669_960_720.png" alt="./img/costa-rica-890669_960_720.png"
                                 width="50px">
                         </div>
-                    </div>vsdvasdvas
+                    </div>
                 </div>
             </div>
             <div class="footer-copyright center">
@@ -146,7 +144,11 @@
     <script src="./js/materialize.js"></script>
     <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
+    <script src="./js/constant.js"></script>
+    <script src="./js/object.js"></script>
+    <script src="./js/alert.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/bindevent.js"></script>
 </body>
 
 </html>
