se han corregido errores en los metodos en la logica y en la estructura de los archivos javascript del proyecto para la mejora de un mejor rendimiento en la aplicacion.

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
         <!-- Dropdown Structure -->
         <ul id="dropdown1" class="dropdown-content">
-            <li><a href="#!" id="close-session">Cerrar session</a></li>
+            <li><a href="#!" id="" class="close-session">Cerrar session</a></li>
         </ul>
         <nav class="black">
             <div class="nav-wrapper">
@@ -56,13 +56,13 @@
             <li><a href="./dashboard.html">Dashboard</a></li>
             <li><a href="./rides.html">Rides</a></li>
             <li><a href="./setting.html">Configuración</a></li>
-            <li><a href="#" id="close-session">Cerrar session</a></li>
+            <li><a href="#" id="" class="close-session">Cerrar session</a></li>
         </ul>
 
         <div class="container">
             <div class="section white">
                 <h2 class="header center">Mis Rides</h2>
-                <a class="btn waves-effect green btn-small right"><i class="material-icons left">add</i>Añadir</a>
+                <a class="btn waves-effect green btn-small right" href="./rides.html"><i class="material-icons left">add</i>Añadir</a>
                 <table class="highlight centered">
                     <thead>
                         <tr>
@@ -133,12 +133,12 @@
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
+    <script src="./js/message.js"></script>
+    <script src="./js/object.js"></script>
     <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
-    <script src="./js/constant.js"></script>
-    <script src="./js/object.js"></script>
-    <script src="./js/alert.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/validation.js"></script>
     <script src="./js/bindevent.js"></script>
 </body>
 
