--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                             de
                             transporte a particulares.
                         </p>
-                        <a href="#section-1" id="link" class="btn btn-large pulse blue lighten-1">Preciona aquí para
-                            ver rides</a>
+                        <a href="#section-1" id="link" class="btn btn-large pulse blue lighten-1">Ir a ver rides</a>
                     </div>
                     <div class="parallax">
                         <img src="https://img.motoryracing.com/noticias/portada/22000/22857-n.jpg">
