--- a/rides.html
+++ b/rides.html
@@ -152,7 +152,8 @@
                             <div class="left" id="alert-day"></div>
                         </div>
                         <button type="reset" class="btn waves-effect red btn-long"><i class="material-icons left">cancel</i>Cancelar</button>
-                        <a class="waves-effect waves-light green btn-long btn modal-trigger" id="btn_ride" href="#modal1"><i class="material-icons left">save</i>Guardar</a>
+                        <a class="waves-effect waves-light green btn-long btn modal-trigger" id="btn_ride" href="#modal1"><i
+                                class="material-icons left">save</i>Guardar</a>
                     </form>
                 </div>
             </div>
@@ -192,12 +193,12 @@
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
-    <script src="./js/sessionstorage.js"></script>
-    <script src="./js/localstorage.js"></script>
     <script src="./js/constant.js"></script>
     <script src="./js/object.js"></script>
-    <script src="./js/alert.js"></script>
+    <script src="./js/sessionstorage.js"></script>
+    <script src="./js/localstorage.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/alert.js"></script>
     <script src="./js/bindevent.js"></script>
 </body>
 
