--- a/login.html
+++ b/login.html
@@ -114,12 +114,12 @@
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
+    <script src="./js/message.js"></script>
+    <script src="./js/object.js"></script>
     <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
-    <script src="./js/constant.js"></script>
-    <script src="./js/object.js"></script>
-    <script src="./js/alert.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/validation.js"></script>
     <script src="./js/bindevent.js"></script>
 </body>
 
