--- a/setting.html
+++ b/setting.html
@@ -61,21 +61,24 @@
             <div class="container">
                 <h2 class="header center">Configuraciónes</h2>
                 <div class="row">
-                    <form class="col s12">
+                    <form class="col s12" id="form" name="form">
                         <div class="row">
                             <div class="input-field col s12">
                                 <input id="full-name" name="full-name" type="text" class="validate" required>
                                 <label for="full-name">Nombre Completo</label>
+                                <div class="left" id="alert-fullName"></div>
                             </div>
                             <div class="input-field col s12">
                                 <input name="speed" id="speed" type="number" class="validate" required>
                                 <label for="start">Velocidad promedio</label>
+                                <div class="left" id="alert-speed"></div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
                                 <textarea name="about-me" id="about-me" type="text" class="validate" required></textarea>
                                 <label for="description">Sobre mí</label>
+                                <div class="left" id="alert-aboutMe"></div>
                             </div>
                         </div>
                         <button type="reset" class="btn waves-effect red btn-long"><i class="material-icons left">cancel</i>Cancelar</button>
@@ -119,12 +122,12 @@
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
-    <script src="./js/sessionstorage.js"></script>
-    <script src="./js/localstorage.js"></script>
     <script src="./js/constant.js"></script>
     <script src="./js/object.js"></script>
-    <script src="./js/alert.js"></script>
+    <script src="./js/sessionstorage.js"></script>
+    <script src="./js/localstorage.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/alert.js"></script>
     <script src="./js/bindevent.js"></script>
 </body>
 
