--- a/signin.html
+++ b/signin.html
@@ -92,10 +92,10 @@
                                 <div class='input-field col s12'>
                                     <input class='validate' type='password' name='passwd-repeat' id='passwd-repeat' />
                                     <label for='passwd-repeat'>Repetir Contraseña</label>
-                                    <div class="left" id="alert-repasswd"></div>
+                                    <div class="left" id="alert-repeatpasswd"></div>
                                 </div>
                                 <label class="label">
-                                    <p>¿ya tienes cuenta?, inicia session <a class='blue-text' href='./login.html'><b>aquí</b></a>.</p>
+                                    <p>¿ya tienes una cuenta?, inicia session <a class='blue-text' href='./login.html'><b>aquí</b></a>.</p>
                                 </label>
                             </div>
 
@@ -142,12 +142,12 @@
 
     <!-- My JavaScript -->
     <script src="./js/materialize.js"></script>
+    <script src="./js/message.js"></script>
+    <script src="./js/object.js"></script>
     <script src="./js/sessionstorage.js"></script>
     <script src="./js/localstorage.js"></script>
-    <script src="./js/constant.js"></script>
-    <script src="./js/object.js"></script>
-    <script src="./js/alert.js"></script>
     <script src="./js/app.js"></script>
+    <script src="./js/validation.js"></script>
     <script src="./js/bindevent.js"></script>
 </body>
 
